Fix disappearing checkboxes on smaller screens
Closes #2590

--- a/indico/htdocs/sass/partials/_tables.scss
+++ b/indico/htdocs/sass/partials/_tables.scss
@@ -92,6 +92,7 @@ td.i-table, th.i-table {
 
     &.checkbox-column {
         width: 2.5em;
+        min-width: 2.5em;
     }
 
     &.id-column {
